Udpaded sound button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="CSS/favicon-16x16.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
 </head>
 <body>
+    <audio id="sounds"></audio>
     <div class="container">
         <div class="items">
             <!-- Dictionary Header -->
@@ -25,7 +30,7 @@
             <div class="button" id="button">
                 <button>Search</button>
             </div>
-            <div class="result" id="result">
+            <div class="result" id="result" >
             </div>
         </div>
     </div>
